# Collider-all

./: README.md
cuda-bsgs/: CMakeLists.txt  README.md
cuda-bsgs/build_temp/: CMakeCache.txt
cuda-bsgs/configs/: gpu_profiles.json
cuda-bsgs/cuda-bsgs/cuda-bsgs/scripts/: build.sh  run.sh
cuda-bsgs/cuda-bsgs/scripts/: build.sh  run.sh
cuda-bsgs/include/: utils.hpp
cuda-bsgs/scripts/: build.sh  run.sh
cuda-bsgs/scripts/docker/: Dockerfile
cuda-bsgs/src/: checkpoint.cpp  checkpoint.hpp  host.cpp  kernel.cu
